--- a/runs/sim-study/notes/test-sim-6-7-18/Z2/test-sim-6-7-18-Z2.tex
+++ b/runs/sim-study/notes/test-sim-6-7-18/Z2/test-sim-6-7-18-Z2.tex
@@ -82,8 +82,8 @@ respectively show the true $Z$ and $W$ used to generate the simulated data in
 this study. Note the following:
 \begin{itemize}
   \item Each columns of $Z$, shown in Figure~\ref{fig:Z-true}, is different
-    from the other columns exactly by exactly two bits. In this sense, all
-    columns are "close" to each other.
+    from the other columns exactly by exactly six bits. In this sense, all
+    columns are "far" from each other.
   \item Figure~\ref{tab:W-true} shows the true $W$ used for this study. It
     contains feature abundances that are small in both samples, large in both
     samples, and large in only one sample. For example, feature $k=7$, 
@@ -164,15 +164,12 @@ this study. Note the following:
   \end{center}
   % TODO: Write more?
   \caption{Posterior means of $Z$ for each run. When $\phi=0$, the number of 
-  recovered features is 3 to 6. The features most commonly missing are features
-  1 and 7, which are also the least abundant. For Data 3, when $\phi=0$, the only
-  features that were recovered are features 3, 4, and 6, which are the most
-  abundant features. Feature 5 was not recovered though it has the same aggregate
-  abundance across samples as feature 5. This could be due to feature 5 having
-  a greater abundance in one of the samples. This did not happen when $\phi>0$, 
-  where typically 1 to 2 features (features 1 and 7) were missed. This might
-  suggest that the r-FAM is better suited at identifying small subpopulations 
-  that are similar to other subpopulations.}
+  recovered features is 4 to 6. The features most commonly missing are features
+  1 and 7, which are also the least abundant. For Data 3, when $\phi=0$, 
+  feature 2 (the next least abundant feature) was also missing at times.
+  For $\phi>0$, all features were recovered in every run. This suggests
+  that when features are distinct, the r-FAM is more likely to recover
+  all features, even if some are only weakly present in one sample.}
   \label{fig:zmean}
 \end{figure}
  
@@ -183,7 +180,7 @@ this study. Note the following:
     \imgtemplate{Z1.pdf}{0.15}{\zind}
   \end{center}
   % TODO: Write more?
-  \caption{}
+  \caption{Duplicated features appear in $\hat Z_1$.}
   \label{fig:z1est}
 \end{figure}
 
@@ -194,7 +191,7 @@ this study. Note the following:
     \imgtemplate{Z2.pdf}{0.15}{\zind}
   \end{center}
   % TODO: Write more?
-  \caption{}
+  \caption{Duplicated features appear in $\hat Z_2$.}
   \label{fig:z2est}
 \end{figure}
 
