--- a/runs/sim-study/notes/test-sim-6-7-21/test-sim-6-7-21.tex
+++ b/runs/sim-study/notes/test-sim-6-7-21/test-sim-6-7-21.tex
@@ -141,14 +141,14 @@ this study. Note the following:
 \begin{itemize}
   \item We generated $y_{inj}$ from skew Normal distributions. Specifically,
   \begin{itemize}
-    \item Location parameter: $(\mu_{0,j}^\star)^\true=-1 + \epsilon_j$, $\epsilon_j \sim \Uniform(-0.3, 0.3)$
-    \item Location parameter: $(\mu_{1,j}^\star)^\true=1 + \epsilon_j$, $\epsilon_j \sim \Uniform(-0.3, 0.3)$
+    \item Location parameter: $(\mu_{0,i,j}^\star)^\true=-1 + \epsilon_{0,i,j}$, $\epsilon_{0,i,j} \sim \Uniform(-0.3, 0.3)$
+    \item Location parameter: $(\mu_{1,i,j}^\star)^\true=1 + \epsilon_{1,i,j}$, $\epsilon_{1,i,j} \sim \Uniform(-0.3, 0.3)$
     \item Scale parameter: ($\sigma^2_i)^\true=0.5$, $N=(2000, 2000)$
     \item The skewness parameter $\zeta$ was set to -0.9. Note that $\zeta$
           corresponds to $\delta \in \p{-1, 1}$ in \cite{fruhwirth2010bayesian}.
   \end{itemize}
   \item 6000 burn-in, followed by 3000 iterations (no thinning).
-  \item Computation time for each chains was was approximately 12.6 hours.
+  \item Computation time for each chain was was approximately 12.6 hours.
   \item \textbf{Some Priors / setup:}
   \begin{itemize}
     \item $w^\star_{i,k} \sim \Gam(\text{shape}=1, \text{rate}=1/2)$
