report for tsne

--- a/runs/sim-study/notes/test-sim-6-8-1-tsne/test-sim-6-8-1-tsne.tex
+++ b/runs/sim-study/notes/test-sim-6-8-1-tsne/test-sim-6-8-1-tsne.tex
@@ -69,41 +69,74 @@
 
 \maketitle
 
-\section{TSNE}
+\section{TSNE for rFAM, Sample 1}
 \begin{figure}[H]
   \begin{center}  % 6 x 5
     \begin{tabular}{cccc}
-      \hline \\
       $Z_1$, $\phi=0$, $i=1$ &
-      $Z_1$, $\phi=0$, $i=2$ &
       $Z_1$, $\phi=1$, $i=1$ &
-      $Z_1$, $\phi=1$, $i=2$ \\
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi0.0-zind1/rfam/rfam1.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi0.0-zind1/rfam/rfam2.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi1.0-zind1/rfam/rfam1.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi1.0-zind1/rfam/rfam2.pdf} \\
-      \hline \\
+      $Z_1$, $\phi=10$, $i=1$ &
+      $Z_1$, $\phi=25$, $i=1$ \\
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi0.0-zind1/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi1.0-zind1/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi10.0-zind1/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi25.0-zind1/rfam/rfam1.pdf} \\
+      %
       $Z_2$, $\phi=0$, $i=1$ &
-      $Z_2$, $\phi=0$, $i=2$ &
       $Z_2$, $\phi=1$, $i=1$ &
-      $Z_2$, $\phi=1$, $i=2$ \\
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi0.0-zind2/rfam/rfam1.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi0.0-zind2/rfam/rfam2.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi1.0-zind2/rfam/rfam1.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi1.0-zind2/rfam/rfam2.pdf} \\
-      \hline \\
+      $Z_2$, $\phi=10$, $i=1$ &
+      $Z_2$, $\phi=25$, $i=1$ \\
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi0.0-zind2/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi1.0-zind2/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi10.0-zind2/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi25.0-zind2/rfam/rfam1.pdf} \\
+      %
       $Z_3$, $\phi=0$, $i=1$ &
-      $Z_3$, $\phi=0$, $i=2$ &
       $Z_3$, $\phi=1$, $i=1$ &
-      $Z_3$, $\phi=1$, $i=2$ \\
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi0.0-zind3/rfam/rfam1.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi0.0-zind3/rfam/rfam2.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi1.0-zind3/rfam/rfam1.pdf} &
-      \includegraphics[scale=0.25]{\imgdir/pmiss0.6-phi1.0-zind3/rfam/rfam2.pdf} \\
-      \hline
+      $Z_3$, $\phi=10$, $i=1$ &
+      $Z_3$, $\phi=25$, $i=1$ \\
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi0.0-zind3/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi1.0-zind3/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi10.0-zind3/rfam/rfam1.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi25.0-zind3/rfam/rfam1.pdf} \\
     \end{tabular}
   \end{center}
-\label{fig:missmech}
+\label{fig:tsne-rfam-sample1}
+\end{figure}
+
+\section{TSNE for rFAM, Sample 2}
+\begin{figure}[H]
+  \begin{center}  % 6 x 5
+    \begin{tabular}{cccc}
+      $Z_1$, $\phi=0$, $i=2$ &
+      $Z_1$, $\phi=1$, $i=2$ &
+      $Z_1$, $\phi=10$, $i=2$ &
+      $Z_1$, $\phi=25$, $i=2$ \\
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi0.0-zind1/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi1.0-zind1/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi10.0-zind1/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi25.0-zind1/rfam/rfam2.pdf} \\
+      %
+      $Z_2$, $\phi=0$, $i=2$ &
+      $Z_2$, $\phi=1$, $i=2$ &
+      $Z_2$, $\phi=10$, $i=2$ &
+      $Z_2$, $\phi=25$, $i=2$ \\
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi0.0-zind2/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi1.0-zind2/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi10.0-zind2/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi25.0-zind2/rfam/rfam2.pdf} \\
+      %
+      $Z_3$, $\phi=0$, $i=2$ &
+      $Z_3$, $\phi=1$, $i=2$ &
+      $Z_3$, $\phi=10$, $i=2$ &
+      $Z_3$, $\phi=25$, $i=2$ \\
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi0.0-zind3/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi1.0-zind3/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi10.0-zind3/rfam/rfam2.pdf} &
+      \includegraphics[scale=0.3]{\imgdir/pmiss0.6-phi25.0-zind3/rfam/rfam2.pdf} \\
+    \end{tabular}
+  \end{center}
+\label{fig:tsne-rfam-sample2}
 \end{figure}
 
 
