less than shouold be put in math mode (i.e. $<$)

--- a/runs/sim-study/notes/test-sim-6-8-1/test-sim-6-8-1.tex
+++ b/runs/sim-study/notes/test-sim-6-8-1/test-sim-6-8-1.tex
@@ -263,7 +263,7 @@ this study. Note the following:
   \end{center}
   \caption{Posterior estimate of $Z_2$. Features were duplicated in most runs
   where $\phi=0$, and all features were recovered. For $\phi>0$, all runs
-  recovered all features. In (h) and (k), trace amounts (< 1\%) of a feature
+  recovered all features. In (h) and (k), trace amounts ($<$ 1\%) of a feature
   resembling one of the identified features was also learned.}
   \label{fig:z2est}
 \end{figure}
